[package]
name = "ping-pong"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
tower = "0.4"
warp = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
rapier3d = "0.17"  # or rapier2d if your game is 2D
log = "0.4"
env_logger = "0.10"
axum-server = "0.7.2"
axum = {version = "0.8.4", features =["ws"]}
futures-util = "0.3.31"

[features]

